2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* ager.c (update_stats): When calculating statistics, remove a
	little bit from the total memory available to the root activity.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local) [! ENABLE_TESTS]: Only define in this
	case.
	(viengoos.striped) [! ENABLE_TESTS]: Likewise.

2008-07-04  Neal H. Walfield  <neal@gnu.org>

	* activity.c: Include "zalloc.h" and "memory.h".
	(activity_dump): Also print the total amount of memory, the
	available memory, and the memory on the laundry list.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): In the cap_rubout implementation,
	shootdown TARGET.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* object.h (object_desc_to_cap): Correctly set the subpage
	specification.

2008-07-01  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (viengoos_LDADD): Also add
	../libhurd-mm/libas-kernel.a before libc-kernel.a.

2008-06-30  Neal H. Walfield  <neal@gnu.org>

	* cap.c (cap_shootdown): Iterate over all capabilities in a
	cappage and all elements in a folio, not just the first log2 of
	them.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* Makefile.am (all-local): New target.
	(viengoos.striped): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* thread.c: Include <hurd/trace.h>.
	(thread_exregs): Improve debugging output.
	(thread_raise_exception): Likewise.

2008-06-29  Neal H. Walfield  <neal@gnu.org>

	* activity.c (activity_destroy): After printing the profile data,
	print the enabled debugging options.
	
	(do_activity_dump): Also print how many free allocations the
	activity has, its karma and the number of excluded frames.

2008-06-28  Neal H. Walfield  <neal@gnu.org>

	* server.c (server_loop): Fix debug statement.

2008-06-27  Neal H. Walfield  <neal@gnu.org>

	* activity.h (struct activity): Add fields free_bad_karma,
	free_goal, free_allocations and free_initial_allocation.